--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,18 @@
 <title>Game Arcade</title>
 </head>
 <body>
-<p><a href="listPlayersServlet">Players list</a></p>
-<p><a href="listGroupsServlet">Groups list</a></p>
+	<form action="addplayerServlet" method="post">
+		Add a new player
+		<br />
+		First name: <input type="text" name="fname">
+		<br /> 
+		Last name <input type="text" name="lname">
+		<br /> 
+		User name <input type="text" name="username">
+		<br /> 
+		<input type="submit" value="Add Player">
+	</form>
+	<p><a href="listPlayersServlet">Players list</a></p>
+	<p><a href="listGroupsServlet">Groups list</a></p>
 </body>
 </html>
