--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
 <title>Game Arcade</title>
 </head>
 <body>
-	<form action="addplayerServlet" method="post">
+	<form action="addPlayerServlet" method="post">
 		Add a new player
 		<br />
 		First name: <input type="text" name="fname">
@@ -18,5 +18,6 @@
 	</form>
 	<p><a href="listPlayersServlet">Players list</a></p>
 	<p><a href="listGroupsServlet">Groups list</a></p>
+	<p><a href="addPlayersForGroupServlet">Create a new group</a></p>
 </body>
 </html>
