fixed PlayerGroup.equals() method. Formatted list views into tables

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,7 @@
 		<br /> 
 		<input type="submit" value="Add Player">
 	</form>
+	<p><a href="index.html">Add a new player</a></p>
 	<p><a href="listPlayersServlet">Players list</a></p>
 	<p><a href="listGroupsServlet">Groups list</a></p>
 	<p><a href="addPlayersForGroupServlet">Create a new group</a></p>
